lustre/osd-ldiskfs/osd_handler.c
@@ -4935,6 +4935,10 @@ static int osd_invalidate(const struct lu_env *env, struct dt_object *dt)
 	return 0;
 }
 
+static bool osd_check_stale(struct dt_object *dt)
+{
+	return false;
+}
 /*
  * Index operations.
  */
@@ -5123,6 +5127,7 @@ static const struct dt_object_operations osd_obj_ops = {
 	.do_xattr_list		= osd_xattr_list,
 	.do_object_sync		= osd_object_sync,
 	.do_invalidate		= osd_invalidate,
+	.do_check_stale		= osd_check_stale,
 };
 
 static const struct dt_object_operations osd_obj_otable_it_ops = {
